src/gridable.scss
// gridable.scss

@import 'common/variables';
@import 'common/mixins';

// Base
[#{$gridable-prefix}-grid] {
	box-sizing: border-box;
	display: flex;

	> [#{$gridable-prefix}-cell] {
		box-sizing: border-box;
		max-width: 100%;
		flex: 1 0 0%;
	}
}

// Visibility
[#{$gridable-prefix}-grid] {
	> [#{$gridable-prefix}-cell~="hide"] {
		display: none;
	}

	> [#{$gridable-prefix}-cell~="show"] {
		display: block;
	}
}

// Wrapping
[#{$gridable-prefix}-grid], [#{$gridable-prefix}-grid~="wrap:on"] {
	flex-wrap: wrap;
}

[#{$gridable-prefix}-grid~="wrap:off"] {
	flex-wrap: nowrap;
}

// Order
[#{$gridable-prefix}-grid], [#{$gridable-prefix}-grid~="order:normal"] {
	flex-direction: row;
}

[#{$gridable-prefix}-grid~="order:reverse"] {
	flex-direction: row-reverse;
}

// Direction
[#{$gridable-prefix}-grid], [#{$gridable-prefix}-grid~="direction:horizontal"] {
	flex-direction: row;

	&[#{$gridable-prefix}-grid~="order:reverse"] {
		flex-direction: row-reverse;
	}
}

[#{$gridable-prefix}-grid~="direction:vertical"] {
	flex-direction: column;

	&[#{$gridable-prefix}-grid~="order:reverse"] {
		flex-direction: column-reverse;
	}
}

// Alignment
[#{$gridable-prefix}-grid], [#{$gridable-prefix}-grid~="align:start"] {
	align-items: flex-start;
}

[#{$gridable-prefix}-grid~="align:center"] {
	align-items: center;
}

[#{$gridable-prefix}-grid~="align:end"] {
	align-items: flex-end;
}

[#{$gridable-prefix}-grid~="align:fit"] {
	> [#{$gridable-prefix}-cell] {
		display: flex;
	}
}

[#{$gridable-prefix}-grid] {
	> [#{$gridable-prefix}-cell~="align:start"] {
		align-self: flex-start;
	}

	> [#{$gridable-prefix}-cell~="align:center"] {
		align-self: center;
	}

	> [#{$gridable-prefix}-grid~="align:end"] {
		align-self: flex-end;
	}
}

// Justification
[#{$gridable-prefix}-grid], [#{$gridable-prefix}-grid~="justify:start"] {
	justify-content: flex-start;
}

[#{$gridable-prefix}-grid~="justify:center"] {
	justify-content: center;
}

[#{$gridable-prefix}-grid~="justify:end"] {
	justify-content: flex-end;
}

[#{$gridable-prefix}-grid~="justify:between"] {
	justify-content: space-between;
}

[#{$gridable-prefix}-grid~="justify:around"] {
	justify-content: space-around;
}

// Gutter
[#{$gridable-prefix}-grid], [#{$gridable-prefix}-grid~="gutter:normal"] {
	margin: 0 (- $gridable-gutter);

	> [#{$gridable-prefix}-cell] {
		padding: 0 $gridable-gutter;
	}
}

[#{$gridable-prefix}-grid~="gutter:narrow"] {
	margin: 0 (- $gridable-gutter / $gridable-gutter-divider);

	> [#{$gridable-prefix}-cell] {
		padding: 0 ($gridable-gutter / $gridable-gutter-divider);
	}
}

[#{$gridable-prefix}-grid~="gutter:wide"] {
	margin: 0 (- $gridable-gutter * $gridable-gutter-multiplier);

	> [#{$gridable-prefix}-cell] {
		padding: 0 ($gridable-gutter * $gridable-gutter-multiplier);
	}
}

[#{$gridable-prefix}-grid~="gutter:off"] {
	margin: 0;

	> [#{$gridable-prefix}-cell] {
		padding: 0;
	}
}

// Widths
@for $columns from 1 through $gridable-columns {
	[#{$gridable-prefix}-grid~="width:#{$columns}"] > [#{$gridable-prefix}-cell],
	[#{$gridable-prefix}-grid] > [#{$gridable-prefix}-cell~="width:#{$columns}"] {
		flex-basis: percentage($columns / $gridable-columns);
		max-width: percentage($columns / $gridable-columns);
	}
}

// Positions
[#{$gridable-prefix}-grid] {
	> [#{$gridable-prefix}-cell~="position:start"] {
		order: -1;
	}

	> [#{$gridable-prefix}-cell~="position:end"] {
		order: $gridable-columns + 1;
	}

	@for $columns from 1 through $gridable-columns {
		> [#{$gridable-prefix}-cell~="position:#{$columns}"] {
			order: #{$columns};
		}
	}
}

// Offset
[#{$gridable-prefix}-grid] {
	> [#{$gridable-prefix}-cell~="offset:0"] {
		margin-left: 0;
	}

	@for $columns from 1 through $gridable-columns {
		> [#{$gridable-prefix}-cell~="offset:#{$columns}"] {
			margin-left: percentage($columns / $gridable-columns);
		}
	}
}

// Breakpoints
@each $name, $selector in $gridable-breakpoints {
	@include gridable-breakpoint($selector, $gridable-mediaquery) {

		// Visibility
		[#{$gridable-prefix}-grid] {
			> [#{$gridable-prefix}-cell~="hide.#{$name}"] {
				display: none;
			}

			> [#{$gridable-prefix}-cell~="show.#{$name}"] {
				display: block;
			}
		}

		// Wrapping
		[#{$gridable-prefix}-grid~="wrap.#{$name}:on"] {
			flex-wrap: wrap;
		}
		[#{$gridable-prefix}-grid~="wrap.#{$name}:off"] {
			flex-wrap: nowrap;
		}

		// Order
		[#{$gridable-prefix}-grid~="order.#{$name}:normal"] {
			flex-direction: row;
		}
		[#{$gridable-prefix}-grid~="order.#{$name}:reverse"] {
			flex-direction: row-reverse;
		}

		// Direction
		[#{$gridable-prefix}-grid~="direction.#{$name}:horizontal"] {
			flex-direction: row;

			&[#{$gridable-prefix}-grid~="order:reverse"],
			&[#{$gridable-prefix}-grid~="order.#{$name}:reverse"] {
				flex-direction: row-reverse;
			}
		}
		[#{$gridable-prefix}-grid~="direction.#{$name}:vertical"] {
			flex-direction: column;

			&[#{$gridable-prefix}-grid~="order:reverse"],
			&[#{$gridable-prefix}-grid~="order.#{$name}:reverse"] {
				flex-direction: column-reverse;
			}
		}

		// Alignment
		[#{$gridable-prefix}-grid~="align.#{$name}:start"] {
			align-items: flex-start;
		}
		[#{$gridable-prefix}-grid~="align.#{$name}:center"] {
			align-items: center;
		}
		[#{$gridable-prefix}-grid~="align.#{$name}:end"] {
			align-items: flex-end;
		}

		// Justification
		[#{$gridable-prefix}-grid~="justify.#{$name}:start"] {
			justify-content: flex-start;
		}
		[#{$gridable-prefix}-grid~="justify.#{$name}:center"] {
			justify-content: center;
		}
		[#{$gridable-prefix}-grid~="justify.#{$name}:end"] {
			justify-content: flex-end;
		}
		[#{$gridable-prefix}-grid~="justify.#{$name}:between"] {
			justify-content: space-between;
		}
		[#{$gridable-prefix}-grid~="justify.#{$name}:around"] {
			justify-content: space-around;
		}

		// Gutter
		[#{$gridable-prefix}-grid~="gutter.#{$name}:normal"] {
			margin: 0 (- $gridable-gutter);

			> [#{$gridable-prefix}-cell] {
				padding: 0 $gridable-gutter;
			}
		}
		[#{$gridable-prefix}-grid~="gutter.#{$name}:narrow"] {
			margin: 0 (- $gridable-gutter / $gridable-gutter-divider);

			> [#{$gridable-prefix}-cell] {
				padding: 0 ($gridable-gutter / $gridable-gutter-divider);
			}
		}
		[#{$gridable-prefix}-grid~="gutter.#{$name}:wide"] {
			margin: 0 (- $gridable-gutter * $gridable-gutter-multiplier);

			> [#{$gridable-prefix}-cell] {
				padding: 0 ($gridable-gutter * $gridable-gutter-multiplier);
			}
		}
		[#{$gridable-prefix}-grid~="gutter.#{$name}:off"] {
			margin: 0;

			> [#{$gridable-prefix}-cell] {
				padding: 0;
			}
		}

		// Widths
		@for $columns from 1 through $gridable-columns {
			[#{$gridable-prefix}-grid~="width.#{$name}:#{$columns}"] > [#{$gridable-prefix}-cell],
			[#{$gridable-prefix}-grid] > [#{$gridable-prefix}-cell~="width.#{$name}:#{$columns}"] {
				flex-basis: percentage($columns / $gridable-columns);
				max-width: percentage($columns / $gridable-columns);
			}
		}

		// Positions
		[#{$gridable-prefix}-grid] {
			> [#{$gridable-prefix}-cell~="position.#{$name}:start"] {
				order: -1;
			}

			> [#{$gridable-prefix}-cell~="position.#{$name}:end"] {
				order: $gridable-columns + 1;
			}

			@for $columns from 1 through $gridable-columns {
				> [#{$gridable-prefix}-cell~="position.#{$name}:#{$columns}"] {
					order: #{$columns};
				}
			}
		}

		// Offset
		[#{$gridable-prefix}-grid] {
			> [#{$gridable-prefix}-cell~="offset.#{$name}:0"] {
				margin-left: 0;
			}

			@for $columns from 1 through $gridable-columns {
				> [#{$gridable-prefix}-cell~="offset.#{$name}:#{$columns}"] {
					margin-left: percentage($columns / $gridable-columns);
				}
			}
		}
	}
}

